--- a/creategroup/creategroup.wxss
+++ b/creategroup/creategroup.wxss
@@ -1,11 +1,11 @@
-.addimage{
+.addimage,.addimgshow{
+    display: block;
     height:200rpx;
     width:200rpx;
     background-size: 100%;
     margin:0 auto;
     margin-top:120rpx;
     overflow: hidden;
-    position: relative;
     border-radius:10rpx;
 }
 page{
@@ -13,11 +13,6 @@ page{
     height:100%;
     position: relative;
     float:left;
-}
-.addimage image{
-    display: block;
-    width:100%;
-    height:100%;
 }
 .groupname{
     display: block;
