--- a/pages/creategroup/creategroup.wxml
+++ b/pages/creategroup/creategroup.wxml
@@ -1,6 +1,7 @@
 <view bindtap="checkimage" class="addimage">
-    <image src="{{imagesrc}}" class="addimgshow"></image>
+    <image src="../../image/creategroup/addimg.png" wx:if="{{!imagesrc}}"></image>
+    <image src="{{imagesrc}}" class="addimgshow" wx:else></image>
 </view>
-<input class="groupname" placeholder="填写圈子名称（2-10个字" placeholder-style="color:#b2b2b2" maxlength="10" bindinput="checkval"/>
-<button class="quanzi_no" id="{{quanzi}}">创建圈子</button>
+<input class="groupname" placeholder="填写圈子名称（2-10个字)" placeholder-style="color:#b2b2b2" maxlength="10" bindinput="checkval"/>
+<button class="quanzi_no" id="{{quanzi}}" bindtap="surecreate">创建圈子</button>
 <text class="tishi">一个用户只能创建一个圈子</text>
