--- a/pages/grouplist/grouplist.wxss
+++ b/pages/grouplist/grouplist.wxss
@@ -1,4 +1,13 @@
 /**app.wxss**/
+page {
+  width: 100%;
+  height: 100%;
+}
+.quanzi_container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
 .quanzi_item {
   display: flex;
   position: relative;
@@ -21,8 +30,15 @@
   border-bottom: 1rpx solid #aaa;
 }
 
+.quanzi_item:last-child .quanzi_wrapper {
+  border-bottom: none;
+}
+.quanzi_item:last-child{
+    border-bottom:1rpx solid #aaa;
+}
+
 .quanzi_wrapper .quanzi_name{
-  margin-top: 36rpx;
+  margin-top: 27rpx;
 }
 .quanzi_wrapper .my_quanzi {
   font-size: 24rpx;
@@ -60,9 +76,9 @@
 }
 
 .create_quanzi {
-  margin-top: 30rpx;
+  position: absolute;
+  bottom: 60rpx;
   width: 100%;
-  text-align: center;
 }
 
 .create_quanzi button {
