--- a/pages/likelist/likelist.wxml
+++ b/pages/likelist/likelist.wxml
@@ -11,7 +11,7 @@
       </view>
       <view class="right">
         <view class="p_time">17:27</view>
-        <view class="p_delete" bindtap="f_delete_zan" data-zid="{{item._id}}">删除</view>
+        <view class="p_delete" bindtap="f_delete_zan" data-zid="{{item._id}}" wx:if="{{me}}">删除</view>
       </view>
     </view>
 
